Anonymous | Login | 2021-01-24 05:01 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031015 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-10-01 08:27 | 2020-12-02 17:12 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.3.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031015: Visualization, TKOpenGl - OpenGl_WorldViewState does not cache inverted matrix | ||||||||
Description | OpenGl_WorldViewState/OpenGl_ProjectionState/OpenGl_ModelWorldState have myInverseNeedUpdate field, which is never reset to FALSE after first modification. | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|
(0087649) git (administrator) 2019-10-01 08:28 |
Branch CR31015 has been created by kgv. SHA-1: 17be67f17d30a8a4b94be11d57df8e576360a7da Detailed log of new commits: Author: kgv Date: Tue Oct 1 08:27:57 2019 +0300 0031015: Visualization, TKOpenGl - OpenGl_WorldViewState does not cache inverted matrix |
(0089056) git (administrator) 2019-11-18 17:09 |
Branch CR31015_1 has been created by kgv. SHA-1: 47057c7bdec5e67b3514f351abad8919840c8726 Detailed log of new commits: Author: kgv Date: Tue Oct 1 08:27:57 2019 +0300 0031015: Visualization, TKOpenGl - OpenGl_WorldViewState does not cache inverted matrix Implementation has been fixed to proprely set myInverseNeedUpdate flag. |
(0089064) kgv (developer) 2019-11-19 03:06 |
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31015_1-master-KGV [^] |
(0089077) osa (developer) 2019-11-19 17:23 |
The patch was reviewed without remarks |
(0089106) bugmaster (administrator) 2019-11-20 17:05 |
Combination - OCCT branch : WEEK-47 master SHA - 01ba59e958df3e8d3e19f5705a6e40d5574ee0c3 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : WEEK-47 SHA - 0585a8b491d06a1c800faf77c3b79decb046c24f was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16830.62000000013 / 16823.120000000046 [+0.04%] Products Total CPU difference: 10816.570000000062 / 10787.080000000053 [+0.27%] Windows-64-VC14: OCCT Total CPU difference: 18301.015625 / 18299.59375 [+0.01%] Products Total CPU difference: 12814.90625 / 12853.21875 [-0.30%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0089179) git (administrator) 2019-11-24 11:35 |
Branch CR31015_1 has been deleted by inv. SHA-1: 47057c7bdec5e67b3514f351abad8919840c8726 |
(0089185) git (administrator) 2019-11-24 11:35 |
Branch CR31015 has been deleted by inv. SHA-1: 17be67f17d30a8a4b94be11d57df8e576360a7da |
![]() |
|||
occt: master 14a356b1
Timestamp: 2019-10-01 05:27:57 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0031015: Visualization, TKOpenGl - OpenGl_WorldViewState does not cache inverted matrix Implementation has been fixed to proprely set myInverseNeedUpdate flag. |
||
mod - src/OpenGl/OpenGl_ShaderStates.cxx | [ Diff ] [ File ] | ||
mod - src/OpenGl/OpenGl_ShaderStates.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-10-01 08:27 | kgv | New Issue | |
2019-10-01 08:27 | kgv | Assigned To | => kgv |
2019-10-01 08:28 | git | Note Added: 0087649 | |
2019-11-18 17:09 | git | Note Added: 0089056 | |
2019-11-19 03:06 | kgv | Note Added: 0089064 | |
2019-11-19 03:06 | kgv | Assigned To | kgv => osa |
2019-11-19 03:06 | kgv | Status | new => resolved |
2019-11-19 17:23 | osa | Note Added: 0089077 | |
2019-11-19 17:23 | osa | Assigned To | osa => bugmaster |
2019-11-19 17:23 | osa | Status | resolved => reviewed |
2019-11-20 17:05 | bugmaster | Note Added: 0089106 | |
2019-11-20 17:05 | bugmaster | Status | reviewed => tested |
2019-11-21 09:29 | bugmaster | Test case number | => Not required |
2019-11-24 11:21 | bugmaster | Changeset attached | => occt master 14a356b1 |
2019-11-24 11:21 | bugmaster | Status | tested => verified |
2019-11-24 11:21 | bugmaster | Resolution | open => fixed |
2019-11-24 11:35 | git | Note Added: 0089179 | |
2019-11-24 11:35 | git | Note Added: 0089185 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |