0031015: Visualization, TKOpenGl - OpenGl_WorldViewState does not cache inverted matrix

Implementation has been fixed to proprely set myInverseNeedUpdate flag.